# learning-hypermodern

./: .flake8  README.md  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
src/learning_hypermodern/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
