[tool.poetry]
name = "learning-hypermodern"
version = "0.1.0"
authors = ["abstractlyZach <zach3lee@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/abstractlyZach/learning-hypermodern"
repository = "https://github.com/abstractlyZach/learning-hypermodern"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[tool.poetry.scripts]
learning-hypermodern = "learning_hypermodern.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

